tests/a/tests/integrity/fail/pattern/pattern.0.stderr
error: expected {*}{*} ({root}{root},{b}{b}), found {root}{root} ({root}{root},{root}{root})
 --> tests/integrity/fail/pattern/pattern.0.rs:6:18
  |
6 |     let (x, y) = (5, 6);
  |                  ^^^^^^
